--- a/sample-videochat-webrtc-new/src/main/res/layout/actionbar_view.xml
+++ b/sample-videochat-webrtc-new/src/main/res/layout/actionbar_view.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:gravity="center_vertical|center_horizontal"
         android:text="N"
@@ -16,7 +16,6 @@
         android:id="@+id/numberOfListAB"
         android:layout_gravity="left"
         android:background="@drawable/shape_oval_orange"
-        android:layout_marginLeft="10dp"
         android:layout_centerVertical="true" />
 
     <TextView
