--- a/sample-videochat-webrtc-new/src/main/res/menu/menu.xml
+++ b/sample-videochat-webrtc-new/src/main/res/menu/menu.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/log_out"
         android:title="@string/action_log_out"
         android:icon="@drawable/ic_exit_to_app"
-        android:showAsAction="always" />
+        tools:showAsAction="always" />
 </menu>
