--- a/sample-videochat-webrtc-new/src/main/res/layout/element_fragment_video_call.xml
+++ b/sample-videochat-webrtc-new/src/main/res/layout/element_fragment_video_call.xml
@@ -18,7 +18,7 @@
         android:textOn=""
         android:background="@drawable/ic_toggle_camera"
         android:checked="true"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
     <ToggleButton
         android:id="@+id/dynamicToggleVideoCall"
