--- a/sample-videochat-webrtc-new/src/main/res/layout/list_item_opponents.xml
+++ b/sample-videochat-webrtc-new/src/main/res/layout/list_item_opponents.xml
@@ -37,7 +37,7 @@
         <!--android:gravity="center_vertical|center_horizontal"-->
         <!--android:theme="@style/Base.V21.Theme.AppCompat.Light"/>-->
 
-    <RadioButton
+    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="65dp"
         android:id="@+id/opponentsCheckBox"
